# CUDA-FE-With-Haptics

./: CMakeLists.txt  FEM_kernels.cu  TLEDSolver.cu  TLEDSolver.h  TLEDSolver.sln  TLEDSolver.vcproj  TetrahedralMesh.h  Vector3D.h  Visualization_kernels.cu  haptic.h  main.cpp
data/: torus_low_res.msh
